Missed some buttons in No DT, Starred, Search, and CS

--- a/MemoryMosaic/Pages/LibraryContent/No Date Taken.razor
+++ b/MemoryMosaic/Pages/LibraryContent/No Date Taken.razor
@@ -5,12 +5,12 @@
 
 @{
     <header style="@lcv.Header.Style">
-        <button class="iconBtn" @onclick="@lcv.ClearChecks"><span class="material-icons-outlined">close</span></button>
+        <IconButton Icon="close" OnClick="@lcv.ClearChecks"/>
         <span id="selectedAmtText">@lcv.SelectedItemsCount&nbsp;&nbsp;Selected</span>
         <div id="buttons">
             <IconButton Icon="file_download" OnClick="@lcv.DownloadSelected"/>
-            <button class="iconBtn" @onclick="@lcv.cs.Toggle"><span class="material-icons-outlined">collections</span></button>
-            <button class="iconBtn" title="Add or Remove Stars From Selected" @onclick="@lcv.StarPrompt.Toggle"><span class="material-icons-outlined">star_outline</span></button>
+            <IconButton Icon="collections" OnClick="@lcv.cs.Toggle"/>
+            <IconButton Icon="star_outline" OnClick="@lcv.StarPrompt.Toggle" Title="Add or Remove Stars From Selected"/>
             <IconButton Icon="trash" OnClick="@lcv.DeleteBtnClick"/>
         </div>
     </header>
