--- a/MemoryMosaic/Shared/Modal/CollectionSelector.razor
+++ b/MemoryMosaic/Shared/Modal/CollectionSelector.razor
@@ -9,8 +9,8 @@
         <div id="header">
             <span>Add to</span>
             <div id="buttons">
-                <button class="iconBtn" @onclick="@CloseBtnClick"><span class="material-icons-outlined">close</span></button>
-                <button class="iconBtn" @onclick="@ConfirmBtnClick"><span class="material-icons-outlined">check</span></button>
+                <IconButton Icon="close" OnClick="@CloseBtnClick"/>
+                <IconButton Icon="check" OnClick="@ConfirmBtnClick"/>
             </div>
         </div>
 
@@ -26,7 +26,7 @@
         
         <div id="collectionsSearch">
             <input type="text" @bind="@searchText" @bind:event="oninput" placeholder="Search Collections"/>
-            <button class="iconBtn" @onclick="@(() => searchText = "")"><span class="material-icons-outlined">clear</span></button>
+            <IconButton Icon="clear" OnClick="@(() => searchText = "")"/>
         </div>
         
         <div id="collections">
@@ -123,7 +123,7 @@
     }
 
     //Closing the div for selecting album(s) to add selected items to.
-    private async Task CloseBtnClick()
+    private async void CloseBtnClick()
     {
         Disable();
         await JSRuntime.InvokeVoidAsync("enableBackgroundScrolling");
@@ -193,7 +193,7 @@
         //Save this selection of albums/folder for next time.
         PreviousSelectionBtnClick(true);
 
-        await CloseBtnClick();
+        CloseBtnClick();
 
         if (ClearChecksOnConfirm)
             await ClearChecks();
