--- a/MemoryMosaic/Pages/Maintenance/MissingFiles.razor
+++ b/MemoryMosaic/Pages/Maintenance/MissingFiles.razor
@@ -4,7 +4,7 @@
 <link href="css/maintenance/MissingFiles.css" rel="stylesheet"/>
 
 <header>
-    <TextButton Icon="trash" Text="Delete All Paths From DB" OnClick="@DeleteMissingPaths"/>
+    <IconTextButton Icon="trash" Text="Delete All Paths From DB" OnClick="@DeleteMissingPaths"/>
 </header>
 
 <div id="mainDiv">
