--- a/MemoryMosaic/Pages/Maintenance/UntrackedFiles.razor
+++ b/MemoryMosaic/Pages/Maintenance/UntrackedFiles.razor
@@ -4,8 +4,8 @@
 <link href="css/maintenance/UntrackedFiles.css" rel="stylesheet"/>
 
 <header>
-    <TextButton Icon="drive_file_move" Text="Move All to Import" OnClick="@MoveAll"/>
-    <TextButton Icon="trash" Text="Delete All" OnClick="@DeleteAll"/>
+    <IconTextButton Icon="drive_file_move" Text="Move All to Import" OnClick="@MoveAll"/>
+    <IconTextButton Icon="trash" Text="Delete All" OnClick="@DeleteAll"/>
 </header>
 
 @{
