--- a/MemoryMosaic/Shared/Modal/TwoChoiceInput.razor
+++ b/MemoryMosaic/Shared/Modal/TwoChoiceInput.razor
@@ -8,8 +8,8 @@
     <div id="inputDiv" style="@PositioningStyle">
         <span id="message">@Message</span>
         <div id="buttons">
-            <TextButton Icon="@NoBtnIcon" Text="@NoBtnText" OnClick="@NoBtnClick"/>
-            <TextButton Icon="@YesBtnIcon" Text="@YesBtnText" OnClick="@YesBtnClick"/>
+            <IconTextButton Icon="@NoBtnIcon" Text="@NoBtnText" OnClick="@NoBtnClick"/>
+            <IconTextButton Icon="@YesBtnIcon" Text="@YesBtnText" OnClick="@YesBtnClick"/>
         </div>
     </div>
 </ModalBackground>
