--- a/MemoryMosaic/Pages/Import.razor
+++ b/MemoryMosaic/Pages/Import.razor
@@ -36,7 +36,7 @@
 			if (selectedItems.Count == 0 || selectedItems.Count == importFiles.Count) addBtnMsg = "Add All";
 			else if (selectedItems.Count == 1) addBtnMsg = "Add 1 Item";
 			else addBtnMsg = $"Add {selectedItems.Count} Items";
-			<TextButton ID="addBtn" Icon="library_add" Text="@addBtnMsg" OnClick="@AddItems"/>
+			<IconTextButton ID="addBtn" Icon="library_add" Text="@addBtnMsg" OnClick="@AddItems"/>
 		}
 		
 		<input @ref="@searchInput" id="search" type="text" @bind="@searchText" @bind:event="oninput" @onkeydown="@(e => { if (e.Code is "Enter" or "NumpadEnter") SearchItems(); })" @onfocusout="@SearchItems" placeholder="Search original/renamed filenames"/>
