Create LinkButton. Reuse IconTextButton CSS, small update to it to support LinkButton

--- a/MemoryMosaic/wwwroot/css/components/buttons/IconTextButton.css
+++ b/MemoryMosaic/wwwroot/css/components/buttons/IconTextButton.css
@@ -2,7 +2,7 @@
     background-color: black;
     border: 1px solid white;
     border-radius: 4px;
-    display: flex;
+    display: inline-flex;
     align-items: center;
     font-size: 1rem;
     font-weight: 400;
