Add TextColor parameter to IconTextButton

--- a/MemoryMosaic/Shared/Buttons/DropdownButton.razor
+++ b/MemoryMosaic/Shared/Buttons/DropdownButton.razor
@@ -12,5 +12,5 @@
 	{
 		<span class="material-icons-outlined" style="@IconStyle">@Icon</span>
 	}
-	<span style="@TextStyle">@Text</span>
+	<span style="color: @TextColor; @TextStyle">@Text</span>
 </button>
