--- a/MemoryMosaic/Shared/ImportItem.razor
+++ b/MemoryMosaic/Shared/ImportItem.razor
@@ -93,7 +93,7 @@
 
 	@if (ImportFile.starred)
 	{
-		<span class="material-icons-outlined star-icon">star</span>
+		<MaterialIcon Icon="star" Class="star-icon"/>
 	}
 </div>
 
