--- a/MemoryMosaic/Pages/LibraryContent/CollectionView.razor
+++ b/MemoryMosaic/Pages/LibraryContent/CollectionView.razor
@@ -24,7 +24,7 @@
                 <input type="text" placeholder="Enter new collection name" @bind="@NewCollectionName" @bind:event="oninput" autocomplete="off"/>
             }
 
-            <span title="@(collection.readOnly ? "Readonly" : "")" class="material-icons-outlined">@(collection.readOnly ? "lock" : "")</span>
+            <MaterialIcon Icon="@(collection.readOnly ? "lock" : "")" Title="@(collection.readOnly ? "Readonly" : "")"/>
 
             @if (buttons.Visible)
             {
